# ffmpeg_decode_SDL_player

./: .gitignore  CMakeLists.txt  README
include/: AudioChannel.h  BaseChannel.h  DerryPlayer.h  VideoChannel.h  io_data.h  safe_queue.h  udp_rev.h  user_comm.h  video_decoder_core.h  video_encoder_core.h
src/: DerryPlayer.cpp  VideoChannel.cpp  darry_demo.cpp  ffmpeg_from_csdn.cpp  io_data.cpp  main.cpp  main.cpp.bak  udp_rev.cpp  video_decoder_core.cpp  video_encoder_core.cpp
